--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>ProvaDevOps</title>
+    <title>Fanpage de Gatinhos</title>
 </head>
 <body>
-    <h1>Aqui vai um título</h1>
+    <h1>Perfil #catsoninstagram</div></h1>
+    <img src="imagens/gatoprova.jpg">
 </body>
 </html>
