--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Fanpage de Gatinhos</title>
+    <title>Carros</title>
 </head>
 <body>
-    <h1>Perfil #catsoninstagram</div></h1>
-    <img src="imagens/gatoprova.jpg">
+    <h1>Perfil #carsoninstagram</div></h1>
+    <img src="imagens/skylineprova.jpg">
 </body>
 </html>
